make frontend ready for deployment on maven
git-svn-id: http://svn.code.sf.net/p/helio-vo/code/trunk@1706 5d9e9ddb-692e-4027-9be8-b4f4f3982da7